kubernetes/quarkus-app/service.yml
---

apiVersion: v1
kind: Service
metadata:
 name: quarkus-vertx-knative-service
spec:
 selector:
  app: quarkus-vertx-knative
  tier: backend
 type: NodePort
 ports:
  - port: 12900
    name: http
    targetPort: 12900
    protocol: TCP
    nodePort: 30106
